atualização dos textos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="hero-overlay"></div>
     <div class="container">
       <div class="hero-content">
-        <h1>Porto Tibiriça Escola Náutica</h1>
+        <h1>Porto Tibiriçá Escola Náutica</h1>
         <p class="hero-subtitle">Prepare-se para a prova da Marinha com nossa plataforma de simulados inteligentes</p>
         <div class="hero-buttons">
           <a href="#simulado" class="btn btn-primary">Fazer Simulado Agora</a>
@@ -117,14 +117,11 @@
             <input type="text" placeholder="Seu nome completo" required />
           </div>
           <div class="form-group">
-            <input type="email" placeholder="Seu melhor e-mail" />
+            <input type="email" placeholder="Seu e-mail" />
           </div>
           <div class="form-group">
             <select required>
               <option value="">Selecione o tipo de prova</option>
-              <option value="ripeam">RIPEAM</option>
-              <option value="balizamento">Balizamento</option>
-              <option value="normam">NORMAM</option>
               <option value="completo">Simulado Completo</option>
             </select>
           </div>
@@ -146,9 +143,6 @@
         <div class="footer-links">
           <div class="links-column">
             <h4>Simulados</h4>
-            <a href="#">RIPEAM</a>
-            <a href="#">Balizamento</a>
-            <a href="#">NORMAM</a>
             <a href="#">Prova Completa</a>
           </div>
         </div>
